# swarmx

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.en.md  README.md  README.zh-CN.md  skills-lock.json  untitled.pen
.agents/skills/flockmux-agent-upgrades/: SKILL.md
.agents/skills/swarmx-agent-upgrades/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
.ux-review/: analysis-be-model.md  analysis-fe-map.md  chat-redesign-bindings.json  chat-redesign-dirA-conversation-first.md  chat-redesign-dirB-cockpit-split.md  chat-redesign-dirC-thread-as-workspace.md  chat-redesign-judges.json  chat-redesign-research.json  chat-redesign-spec-1-messages.md  chat-redesign-spec-2-live-activity.md  chat-redesign-spec-3-startup-failure.md  chat-redesign-spec-4-composer.md  chat-redesign-spec-5-right-panel.md  chat-redesign-spec-6-plan-changes.md  chat-redesign-spec.md  chat-redesign.md  final-redesign.md  firsthand-findings.md  proposal-A-task-first.md  proposal-B-chat-first.md  proposal-C-session-first.md
cli-plugins/: claude.toml  codex.toml  kimi.toml  opencode.toml  reasonix.toml  zulu.toml
cli-plugins/opencode/: flockmux-wake.js  swarmx-wake.js
crates/flockmux-cli/: Cargo.toml
crates/flockmux-cli/src/: main.rs
crates/flockmux-mcp/: Cargo.toml
crates/flockmux-mcp/src/: lib.rs  (+5 more)
crates/flockmux-protocol/: Cargo.toml
crates/flockmux-pty/: Cargo.toml
crates/flockmux-pty/src/: lib.rs
crates/flockmux-recorder/: Cargo.toml
crates/flockmux-recorder/src/: lib.rs  writer.rs
crates/flockmux-recorder/tests/: recorder_test.rs
crates/flockmux-server/: Cargo.toml
crates/flockmux-server/src/: acp.rs  acp_engine.rs  billing.rs  cron.rs  engine_probe.rs  main.rs  models_config.rs  opencode_tui.rs  plugins.rs  pre_spawn.rs  pty_query.rs  pty_stream.rs  reaper.rs  reasonix_serve.rs  registry.rs  roles.rs  runtime_path.rs  spawn.rs  spells.rs  tokens.rs  transcript.rs  trust.rs  verify.rs  wake.rs  worktree.rs
crates/flockmux-server/src/cli/: claude.rs  codex.rs  mod.rs  opencode.rs  reasonix.rs  shared.rs
crates/flockmux-server/src/routes/: api.rs  cron.rs  files.rs  goals.rs  mcp_admin.rs  mod.rs  models_admin.rs  pty_ws.rs  recording.rs  rest.rs  swarm.rs  tasks.rs  terminal_ws.rs  usage.rs  workspaces.rs  ws_swarm.rs
crates/flockmux-shim/: Cargo.toml
crates/flockmux-storage/: Cargo.toml
crates/flockmux-storage/migrations/: 0001_init.sql  0005_workers.sql  0006_workspace_roots.sql  0007_workspace_root_parent.sql  0008_blackboard_path_id.sql  0009_threads.sql  0010_message_thread_id.sql  0012_message_meta.sql  0013_agent_last_activity.sql  0014_thread_model_tier.sql  0016_agent_usage.sql  0018_cron_jobs.sql  0020_goal_evidence.sql  0021_thought_traces.sql
crates/flockmux-storage/src/: connection.rs  lib.rs  models.rs  schema.rs  store.rs
crates/flockmux-storage/tests/: store_test.rs
crates/flockmux-swarm/: Cargo.toml
crates/flockmux-swarm/src/: lib.rs  path_safe.rs  swarm.rs  watcher.rs
crates/flockmux-swarm/tests/: swarm_test.rs
crates/swarmx-cli/: Cargo.toml
crates/swarmx-mcp/: Cargo.toml
crates/swarmx-mcp/src/: handlers.rs  lib.rs  main.rs  tools.rs  wake_check.rs
crates/swarmx-protocol/: Cargo.toml
crates/swarmx-pty/: Cargo.toml
crates/swarmx-pty/src/: lib.rs
crates/swarmx-recorder/: Cargo.toml
crates/swarmx-server/: Cargo.toml
crates/swarmx-server/resources/: litellm_pricing.json
crates/swarmx-server/src/: billing.rs  comate.rs  cron.rs  engine_probe.rs  fusion.rs  main.rs  models_config.rs  opencode_tui.rs  plugins.rs  pty_query.rs  pty_stream.rs  reaper.rs  reasonix_serve.rs  registry.rs  roles.rs  runtime_path.rs  spawn.rs  spells.rs  tokens.rs  transcript.rs  verify.rs  wake.rs  worktree.rs  zulu_serve.rs
crates/swarmx-server/src/cli/: claude.rs  codex.rs  kimi.rs  mod.rs  opencode.rs  reasonix.rs  shared.rs  zulu.rs
crates/swarmx-server/src/routes/: api.rs  comate.rs  cron.rs  files.rs  goals.rs  mcp_admin.rs  mod.rs  models_admin.rs  pty_ws.rs  recording.rs  rest.rs  swarm.rs  tasks.rs  terminal_ws.rs  usage.rs  workspaces.rs  ws_swarm.rs
crates/swarmx-shim/: Cargo.toml
crates/swarmx-storage/: Cargo.toml
crates/swarmx-swarm/: Cargo.toml
docs/: configuration.md  deep-review-2026-07-08.md  deep-review-2026-07-09.md  full-review-2026-06-13.md  fusion-vs-flockmux-positioning.md  fusion-vs-swarmx-positioning.md  handoff-protocol.md  hermes-studio-borrow-research-2026-06-14.md  hermes-studio-borrow-research-data.json  implementation-review-2026-05.md  maturity-audit-2026-06.md  multi-cli-redesign-plan.md  opencode-integration-plan.md  perf-audit-2026-06-20.md  quickstart.md  road-to-100-2026-06-15.md  road-to-100-round2-2026-06-15.md  w2-1-verification-gate-design-2026-06-15.md  w2-3-stuck-detection-design-2026-06-15.md
docs/design/: P0-role-registry-and-typed-handoff.md
docs/research/: hermes-web-ui-borrow-2026-06.md  role-task-aware-allocation-2026-06.md  ux-review-2026-06.md
dogfood-output/: report.md
roles/: architect.md  backend.md  critic.md  docs-writer.md  fixer.md  frontend.md  orchestrator.md  planner.md  researcher.md  reviewer.md  scout.md  test-runner.md  test.md
scripts/: bump-version.mjs  directions-smoke.mjs  gen-updater-manifest.mjs  golden-cli-test.sh  harness-check.mjs  install-git-hooks.sh  recording-smoke.mjs  release-naming.mjs  release-naming.test.mjs  rename-release-assets.mjs  reroot-acceptance.mjs  resume-gap.mjs  resume-smoke.mjs  stress-6agent.mjs  swarm-smoke.mjs  test-stack.sh  update-litellm-pricing.mjs
spells/: auto-dispatch.md  critic-loop.md  fullstack-feature-gated.md  fullstack-feature-reviewed.md  fullstack-feature-strict.md  fullstack-feature.md  init.md
web/: eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
web/src/: App.tsx  main.tsx
web/src-tauri/: .gitignore  Cargo.toml  README.md  tauri.conf.json
web/src-tauri/capabilities/: default.json
web/src-tauri/icons/: icon.icns
web/src-tauri/scripts/: build-sidecar.sh
web/src-tauri/src/: lib.rs  main.rs
(+194 files in other folders)
