[workspace]
resolver = "2"
members = [
    "crates/swarmx-protocol",
    "crates/swarmx-shim",
    "crates/swarmx-pty",
    "crates/swarmx-server",
    "crates/swarmx-swarm",
    "crates/swarmx-mcp",
    "crates/swarmx-storage",
    "crates/swarmx-recorder",
    "crates/swarmx-cli",
]
exclude = ["web/src-tauri"]

[workspace.package]
version = "0.1.2"
edition = "2021"
rust-version = "1.83"
license = "MIT"
authors = ["swarmx contributors"]

[workspace.dependencies]
# async runtime
tokio = { version = "1.41", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }

# web
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors", "trace", "catch-panic", "request-id"] }

# pty
portable-pty = "0.9"

# serde / json
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1"

# error / log
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# misc
bytes = "1.7"
dashmap = "6"
parking_lot = "0.12"
uuid = { version = "1", features = ["v4", "serde"] }

# storage
rusqlite = { version = "0.39", features = ["bundled", "limits"] }
r2d2 = "0.8"
r2d2_sqlite = "0.34"

# swarm
notify = "8.2"
notify-debouncer-full = "0.7"
sha2 = "0.10"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
