[package]
name = "flockmux-recorder"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
bytes.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
