[package]
name = "swarmx-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "swarmx-mcp"
path = "src/main.rs"

[lib]
name = "swarmx_mcp"
path = "src/lib.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json"] }
clap = { version = "4", features = ["derive", "env"] }

[dev-dependencies]
axum.workspace = true
tempfile = "3"
