[workspace]
# src-tauri is its own micro-workspace so Tauri CLI's `cargo run` (which
# has no `-p` flag) selects this crate unambiguously. Including it in the
# repo root workspace caused "tauri project package doesn't exist in cargo
# metadata output `packages`" because the CLI iterates `workspace_default_members`
# which on a multi-crate root would not include src-tauri by default.

[package]
name = "flockmux-tauri"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "flockmux desktop shell (Tauri 2)"
rust-version = "1.83"

[lib]
name = "flockmux_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "flockmux-tauri"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
# 让 wizard 能调系统原生文件夹选择器 (open({ directory: true }))，告别让
# 用户手粘绝对路径。前端通过 @tauri-apps/plugin-dialog 调用。
tauri-plugin-dialog = "2"
# 软件自动更新：检测 / 下载 / 安装新版（plugin-process 提供安装后 relaunch）。
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
