[workspace]
# src-tauri is its own micro-workspace so Tauri CLI's `cargo run` (which
# has no `-p` flag) selects this crate unambiguously. Including it in the
# repo root workspace caused "tauri project package doesn't exist in cargo
# metadata output `packages`" because the CLI iterates `workspace_default_members`
# which on a multi-crate root would not include src-tauri by default.

[package]
name = "swarmx-tauri"
version = "0.1.4"
edition = "2021"
license = "MIT"
description = "swarmx desktop shell (Tauri 2)"
rust-version = "1.83"

[lib]
name = "swarmx_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "swarmx-tauri"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
# 让 wizard 能调系统原生文件夹选择器 (open({ directory: true }))，告别让
# 用户手粘绝对路径。前端通过 @tauri-apps/plugin-dialog 调用。
tauri-plugin-dialog = "2"
# 软件自动更新：检测 / 下载 / 安装新版（plugin-process 提供安装后 relaunch）。
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
# 桌面通知：新消息时弹系统通知（受设置页「新消息桌面通知」开关控制）。
tauri-plugin-notification = "2"
# 原生感：禁掉浏览器 chrome 快捷键 (Cmd/Ctrl+R 刷新 / +F 网页查找 / +P 打印 /
# 下载 / devtools) —— 这些在桌面 app 里是纯「这是网页」破绽。仅 release 启用
# (见 lib.rs)，CONTEXT_MENU 故意不交给它 (main.tsx 有跟随 user-select 的智能右键)。
tauri-plugin-prevent-default = "5"
